fix use game_action

--- a/client-server.html
+++ b/client-server.html
@@ -144,10 +144,10 @@
       </div>
       
       <!-- 채팅 -->
-      <!-- <div class="section">
+      <div class="section">
         <input type="text" id="chatMessage" placeholder="메시지를 입력하세요" style="width: 70%;" />
         <button id="btnSendChat">채팅 보내기</button>
-      </div> -->
+      </div>
     </div>    <!-- 로그 -->
     <!-- 폭은 최대로,  -->
     <div id="game-container" style="display: flex; gap: 20px; width: 100%;">
